# ds-api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README_REFACTOR.md  probe_tool_stream.py
.github/workflows/: ci.yml
agent-server/: Cargo.toml  README.md
agent-server/src/: bot.rs  config.rs  main.rs  state.rs
ds-api/: CHANGELOG.md  Cargo.toml  README.md
ds-api-macros/: Cargo.toml
ds-api-macros/src/: lib.rs
ds-api/docs/releases/: vNext.md
ds-api/examples/: agent_demo.rs  cli_streaming.rs  interrupt.rs  mcp-server-demo.rs  openrouter_free.rs  readme_quick_example.rs
ds-api/src/: agent.rs  api.rs  error.rs  lib.rs  mcp.rs  mcp_server.rs  response.rs  simple_chatter.rs  tool.rs  tool_trait.rs
ds-api/src/agent/: agent_core.rs  executor.rs  mod.rs  stream.rs
ds-api/src/api/: client.rs  mod.rs  request.rs
ds-api/src/conversation/: core.rs  deepseek.rs  mod.rs  summarizer.rs
ds-api/src/raw/: mod.rs
ds-api/src/raw/request/: chat_completion.rs  message.rs  model.rs  thinking.rs  tool.rs  tool_choice.rs
ds-api/src/raw/response/: mod.rs
ds-api/src/raw/response/non_streaming/: chat_completion_response.rs  finish_reason.rs  logprobs.rs  object_type.rs
ds-api/src/raw/response/streaming/: chat_completion_chunk.rs  chunk_object_type.rs  delta.rs
ds-api/tests/: coverage_boost.rs  tool_return_types.rs
examples/: basic_usage.rs  comprehensive.rs  hello_world.rs  json_response.rs  request_response.rs  simple_chatter_console.rs
familiar/: .env.example  Cargo.toml  README.md  RENAME_MAP.txt  system_prompt.txt
familiar/client/: index.html  package.json  vite.config.ts
familiar/client/src/: App.tsx  index.css
familiar/client/src/api/: types.ts
familiar/client/src/components/: ChatInput.module.css  ChatInput.tsx  DiffView.tsx  MarkdownRenderer.tsx  MessageBubble.module.css  MessageBubble.tsx  Sidebar.module.css  Sidebar.tsx
familiar/client/src/hooks/: useChat.ts
familiar/client/src/pages/: ChatPage.module.css  ChatPage.tsx  LoginPage.module.css  LoginPage.tsx
familiar/client/src/store/: auth.tsx
familiar/migrations/: 001_init.sql  002_rename_tool_calls.sql  003_revert_rename.sql  003_rollback_rename_tool_calls.sql
familiar/src/: bot.rs  config.rs  db.rs  embedding.rs  main.rs  state.rs
familiar/src/spells/: a2a_spell.rs  command_spell.rs  file_spell.rs  manage_mcp_spell.rs  mod.rs  script_spell.rs  search_spell.rs
familiar/src/tools/: a2a_tool.rs  command_tool.rs  file_tool.rs  history_tool.rs  mod.rs  outline_tool.rs  present_file.rs  script_tool.rs  search_tool.rs  self_update_tool.rs
familiar/src/web/: auth.rs  files.rs  history.rs  mod.rs  ws.rs
src/: error.rs  lib.rs  normal_chatter.rs  request.rs  response.rs  simple_chatter.rs
src/raw/: mod.rs
src/raw/request/: chat_completion.rs  message.rs  mod.rs  model.rs  response_format.rs  stop.rs  stream_options.rs  thinking.rs  tool.rs  tool_choice.rs
src/raw/response/non_streaming/: choice.rs  mod.rs  usage.rs
src/raw/response/streaming/: chat_completion_chunk.rs  chunk_choice.rs  delta.rs  mod.rs
src/request/: mod.rs
src/response/: mod.rs
tests/integration/: mock_api_tests.rs
