[package]
name = "agent-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agent-server"
path = "src/main.rs"

[dependencies]
ds-api = { path = "../ds-api" }

# Web server
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# HTTP client (for calling Telegram API)
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
futures = "0.3"

# Config / env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
