[package]
name = "ds-api"
version = "0.10.2"
edition = "2024"
description = "A Rust client library for the DeepSeek API with support for chat completions, streaming, and tools"
authors = ["ozongzi <ozongzi@icloud.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ozongzi/ds-api"
readme = "../README.md"
keywords = ["deepseek", "api", "ai", "chat", "llm"]
categories = ["api-bindings", "web-programming"]

[features]
mcp = [
    "dep:rmcp",
]

[dependencies]
async-trait = "0.1"
ds-api-macros = { version = "0.1.3", path = "../ds-api-macros" }
eventsource-stream = "0.2.3"
futures = "0.3.31"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "1.0"

# Tracing for observability and diagnostics
tracing = "0.1"

# Optional: MCP (Model Context Protocol) client support
rmcp = { version = "1.1", optional = true, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
