[package]
name = "familiar"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "familiar"
path = "src/main.rs"

[dependencies]
ds-api = { path = "../ds-api" }

# Discord
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "http",
    "rustls_backend",
] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"
anyhow = "1"

# HTTP client (embedding API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Config / env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
